# hemera-developer-mode-client

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
developer-mode-client/: CMakeLists.txt  configuredevices.cpp  configuredevices.h  configuretarget.cpp  configuretarget.h  main.cpp  mainwindow.cpp  mainwindow.h  starinfowidget.cpp  starinfowidget.h
hsdk/: CMakeLists.txt  basecommand.cpp  basecommand.h  baseremotecommand.cpp  baseremotecommand.h  deploycommand.cpp  deploycommand.h  devicecommand.cpp  devicecommand.h  emulatorcommand.cpp  emulatorcommand.h  gdbcommand.cpp  gdbcommand.h  hacommand.cpp  hacommand.h  helpermacros.h  hsdkcommand.cpp  hsdkcommand.h  invokecommand.cpp  invokecommand.h  launchcommand.cpp  launchcommand.h  main.cpp  outputcommand.cpp  outputcommand.h  remotebuildcommand.cpp  remotebuildcommand.h
images/: Hemera.icns  images.qrc
lib/: CMakeLists.txt  HttpServer.cpp  HttpServer.h  HttpServerConnection.cpp  HttpServerConnection.h  HttpTCPServer.cpp  HttpTCPServer.h  hemeradevelopermodeapplicationoutput.cpp  hemeradevelopermodeapplicationoutput.h  hemeradevelopermodecontroller.cpp  hemeradevelopermodecontroller.h  hemeradevelopermodecontroller_p.h  hemeradevelopermodedeployoperation.cpp  hemeradevelopermodedeployoperation.h  hemeradevelopermodedevice.cpp  hemeradevelopermodedevice.h  hemeradevelopermodedevice_p.h  hemeradevelopermodeemulator.cpp  hemeradevelopermodeemulator.h  hemeradevelopermodeemulator_p.h  hemeradevelopermodeglobalobjects.cpp  hemeradevelopermodeglobalobjects_p.h  hemeradevelopermodehamanager.cpp  hemeradevelopermodehamanager.h  hemeradevelopermodehyperdiscoveryclient.cpp  hemeradevelopermodehyperdiscoveryclient.h  hemeradevelopermodehyperspacestream.cpp  hemeradevelopermodehyperspacestream.h  hemeradevelopermodeoperation.cpp  hemeradevelopermodeoperation.h  hemeradevelopermodeshelloperation.cpp  hemeradevelopermodeshelloperation.h  hemeradevelopermodestar.cpp  hemeradevelopermodestar.h  hemeradevelopermodetarget.cpp  hemeradevelopermodetarget.h  hemeradevelopermodetarget_p.h  hemeradevelopermodetargetmanager.cpp  hemeradevelopermodetargetmanager.h  hemeradevelopermodetargetmanager_p.h  (+4 more)
lib/transports/: hemeradevelopermodetcptransport.cpp  hemeradevelopermodetcptransport.h  hemeradevelopermodetransport.cpp  hemeradevelopermodetransport.h
qt-creator-plugin/: Hemera.json.in  Hemera.mimetypes.xml  genericprogresswidget.ui  hemera.pro  hemera_global.h  hemerabuildconfiguration.cpp  hemerabuildconfiguration.h  hemerabuildinfo.h  hemerabuildpackagestep.cpp  hemerabuildpackagestep.h  hemeraconfigurationpages.cpp  hemeraconfigurationpages.h  hemeraconstants.h  hemeradeployconfiguration.cpp  hemeradeployconfiguration.h  hemeradeploystep.cpp  hemeradeploystep.h  hemeradevice.cpp  hemeradevice.h  hemeradeviceassociatewidget.ui  hemeradeviceconfigurationwidget.cpp  hemeradeviceconfigurationwidget.h  hemeradeviceconfigurationwidget.ui  hemeradevicesetupwidget.ui  hemeradevicetester.cpp  hemeradevicetester.h  hemeraeditor.cpp  hemeraeditor.h  hemeraeditorfactory.cpp  hemeraeditorfactory.h  hemeraemulator.cpp  hemeraemulator.h  hemeraemulatorconfigurationwidget.ui  hemeraemulatorsetupwidget.ui  hemerafilecompletionassist.cpp  hemerafilecompletionassist.h  hemerahighlighter.cpp  hemerahighlighter.h  hemerakitinformation.cpp  hemerakitinformation.h  (+35 more)
qt-creator-plugin/wizards/hemeraqtapplication/: class.cpp  class.h  domain.ha  wizard.json
translations/: CMakeLists.txt  es.ts
ui/: configuredevices.ui  configuretarget.ui  mainwindow.ui  starinfowidget.ui
